--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarek Ahmed</title>
     <meta name="description" content="Tarek Generated Project" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="author" content="Tarek" />
 
     <meta property="og:title" content="connect-craft-portfolio" />
